--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: mining-alert-bot
+    name: Martins-MIning-bot
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
